remove overflow and also add fix height to templtete to remove its oveflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -60,7 +60,7 @@
 
 .max-height {
   overflow-y: auto;
-  max-height: 65vh;
+  max-height: 60vh !important;
 
   /* Scrollbar styling for Firefox */
   scrollbar-width: thin;
@@ -180,7 +180,7 @@
   padding: 20px 25px;
   font-size: 16px;
   color: #333;
-  margin: 20px 0;
+  margin-top: 20px;
   font-family: Arial, sans-serif;
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -312,7 +312,7 @@
     width: 100%;
     height: 100%;
   }
-  .template-name{
+  .template-name {
     font-size: 12px !important;
   }
 }
